<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">


    <TextView
        android:id="@+id/amtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/amtInput"
        android:inputType="phone"
        android:digits="1234567890"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/paxView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pax" />

    <EditText
        android:id="@+id/paxInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="false"
            android:textOff="@string/disabledSVS"
            android:textOn="@string/enabledSVS" />
        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="ToggleButton"
            android:textOff="@string/disabledGST"
            android:textOn="@string/enabledGST" />
    </LinearLayout>

    <TextView
        android:id="@+id/discountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discount" />

    <EditText
        android:id="@+id/discountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/rbPayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSplit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/split" />
        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/displayTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayTotal"/>
    <TextView
        android:id="@+id/displayEach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/displayEach"/>

    <TextView
        android:id="@+id/displayErrorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"/>

</LinearLayout>